# ITI-ROS-Project

./: README.md
ECU/: .gitignore  CMakeLists.txt  README.md  prj.conf
ECU/boards/: esp32s3_devkitc_esp32s3_procpu.overlay
ECU/inc/: encoder.h  imu.h  motor.h  uart_gateway.h  ultrasonic.h
ECU/src/: encoder.c  imu.c  main.c  motor.c  uart_gateway.c  ultrasonic.c
PCB/: PCB.kicad_prl  PCB.kicad_pro  PCB.kicad_sch
Ros2_packages/diff_robot_iti/diff_robot_bringup/: CMakeLists.txt  package.xml
Ros2_packages/diff_robot_iti/diff_robot_bringup/config/: controllers.yaml  display.rviz  ekf.yaml  gazebo_ekf.yaml  my_controllers.yaml  nav2_bt.xml  nav2_params.yaml  slam.yaml
Ros2_packages/diff_robot_iti/diff_robot_bringup/launch/: amcl.launch.py  control.launch.py  dispaly.launch.py  display.launch.py  gazebo.launch.py  lidar.launch.py  nav2.launch.py  robot.launch.py  rsp.launch.py  slam.launch.py
Ros2_packages/diff_robot_iti/diff_robot_description/: CMakeLists.txt  package.xml
Ros2_packages/diff_robot_iti/diff_robot_description/meshes/: left_caster_link.STL  left_wheel_link.STL  lidar_link.STL  right_caster_link.STL  right_wheel_link.STL
Ros2_packages/diff_robot_iti/diff_robot_description/urdf/: robot.xacro  robot_control.xacro  sensors.xacro  solidworks_gen.xacro
Ros2_packages/diff_robot_iti/diffdrive_hardware/: CMakeLists.txt  diffdrive_hardware.xml  package.xml
Ros2_packages/diff_robot_iti/diffdrive_hardware/src/: diffdrive_system.cpp
Ros2_packages/diff_robot_iti/diffdrive_hardware/src/include/diffdrive_hardware/: diffdrive_system.hpp  drive_wheel.hpp  serial_comms.hpp  visibility_control.h
